@@ -1,5 +1,6 @@
 Changes for 1.1.3:
 
+ - always draw graphs for items having type "trapper" (Alexei)
  - added Swedish translation. Thanks to "yeager". (Alexei)
  - support of system.swap.size[,pfree] and system.swap.size[,pused] (Alexei)
  - better calculation of next check timestamp for active items (Alexei)
